--- a/g7_declaration/SQ1-1a.yml
+++ b/g7_declaration/SQ1-1a.yml
@@ -1,3 +1,7 @@
 question: What is the full name of the organisation applying to the G-Cloud 7 framework?
 hint: For a group of economic operators, this will be the name of the lead organisation. If you're submitting a response on behalf of another organisation, include their company name, not yours.
 type: text
+validations:
+  -
+    name: under_character_limit
+    message: "This field must be a maximum of 255 characters."
