--- a/g7_declaration/SQ1-1g.yml
+++ b/g7_declaration/SQ1-1g.yml
@@ -1,3 +1,7 @@
-question: What is the DUNS number for your organisation's head office?
+question: "What is the DUNS number for your organisation's head office?"
 hint: There are 9 digits in a DUNS number.
 type: text
+validations:
+  -
+    name: invalid_format
+    message: "There are either 9 digits in a DUNS number."
