--- a/g7_declaration/SQ1-1j-ii.yml
+++ b/g7_declaration/SQ1-1j-ii.yml
@@ -1,2 +1,6 @@
 question: If you answered 'licensed' or 'a member of a relevant organisation' in question 29, please give details of the state's requirements and confirm whether you've met them.
 type: text
+validations:
+  -
+    name: answer_required
+    message: "This question requires an answer because you answered 'licenced' or 'a member of a relevant organisation' to question 22"
