--- a/g7_declaration/SQ4-1c.yml
+++ b/g7_declaration/SQ4-1c.yml
@@ -3,3 +3,7 @@ question: >
   you think should be taken into
   consideration.
 type: textbox_large 
+validations:
+  -
+    name: answer_required
+    message: "This question is required because you answered yes to either question 54 or question 55."
