--- a/g7_declaration/SQ1-1n.yml
+++ b/g7_declaration/SQ1-1n.yml
@@ -1,3 +1,3 @@
-question: What is the supplier name that should appear on the contract notice?
+question: What is the contact name that should appear on the contract notice?
 hint: The contract notice confirms the outcome of the framework competition and includes the names of all the successful suppliers.
 type: text
