--- a/g7_declaration/SQA2.yml
+++ b/g7_declaration/SQA2.yml
@@ -1,3 +1,3 @@
-question:
-hint:
-type:
+question: Do you confirm that you can provide cloud services as defined in Framework Agreement Schedule 1?
+hint: Check the National Institute of Standards and Technology (NIST) definitions to see if your cloud services meet G-Cloud framework requirements. ADD LINK
+type: boolean
