--- a/g7_declaration/SQA4.yml
+++ b/g7_declaration/SQA4.yml
@@ -1,3 +1,3 @@
-question:
+question: Do you confirm that all the services you are submitting for G-Cloud will be accurately described?
 hint:
-type:
+type: boolean
