--- a/g7_declaration/SQA5.yml
+++ b/g7_declaration/SQA5.yml
@@ -1,3 +1,3 @@
-question:
+question: Do you confirm that you are prepared to provide proof of any claims made about the services you're submitting to G-Cloud 7?
 hint:
-type:
+type: boolean
