--- a/frameworks/digital-outcomes-and-specialists/questions/services/anonymousRecruitment.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/anonymousRecruitment.yml
@@ -4,3 +4,7 @@ depends:
   - "on": "lot"
     being:
       - user-research-participants
+
+validations:
+  - name: answer_required
+    message: 'You need to answer this question.'
