--- a/frameworks/digital-outcomes-and-specialists/questions/services/openSourceLicence.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/openSourceLicence.yml
@@ -5,3 +5,7 @@ depends:
     being:
       - digital-outcomes
       - digital-specialists
+
+validations:
+  - name: answer_required
+    message: 'You need to answer this question.'
