--- a/frameworks/g-cloud-6/questions/services/supportResponseTime.yml
+++ b/frameworks/g-cloud-6/questions/services/supportResponseTime.yml
@@ -21,5 +21,5 @@ validations:
     message: 'Support response time must be no more than 20 words.'
   -
     name: under_character_limit
-    message: "Support response time can't be more than 200 characters."
+    message: "Support response time must be no more than 200 characters."
 question: 'Standard support response times'
