Add new `any_of` field to specialist questions.
`anyOf` keys are neither required nor are they optional, rather
they're groups of nested questions where at least one group must
exist for the whole service to be valid.

To put that another way:
- Our digital specialists service is composed of must-answer questions
  and specialists
- There are two questions for every specialist, so you must answer both
  to have one specialist added to the service
- A valid service requires at least one specialist

Therefore, we have to validate that at least one group of specialist
questions has been submitted.  This helps us do that.

--- a/frameworks/digital-outcomes-and-specialists/questions/services/developer.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/developer.yml
@@ -5,6 +5,7 @@ depends:
     being:
       - digital-specialists
 type: multiquestion
+any_of: specialist
 questions:
   - developerLocations
   - developerDayRate
