--- a/frameworks/digital-outcomes-and-specialists/questions/services/labPrice.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/labPrice.yml
@@ -12,3 +12,20 @@ fields:
 field_defaults:
   price_unit: Lab
   price_interval: Day
+
+validations:
+  - name: answer_required
+    field: labPriceMin
+    message: 'You need to answer this question.'
+  - name: not_money_format
+    field: labPriceMin
+    message: "Minimum price must be a number, without units, eg 99.95"
+  - name: answer_required
+    field: labPriceMax
+    message: 'You need to answer this question.'
+  - name: not_money_format
+    field: labPriceMax
+    message: "Maximum price must be a number, without units, eg 99.95"
+  - name: max_less_than_min
+    field: labPriceMax
+    message: "Minimum price must be less than maximum price"
