--- a/frameworks/digital-outcomes-and-specialists/messages/dates.yml
+++ b/frameworks/digital-outcomes-and-specialists/messages/dates.yml
@@ -1,4 +1,5 @@
 clarifications_close_date: "5pm, 6 January 2016"
 clarifications_publish_date: "5pm, 13 January 2016"
 framework_close_date: "3pm, 19 January 2016"
+intention_to_award_date: "18 February 2016"
 framework_live_date: ""
