--- a/frameworks/g-cloud-7/messages/dates.yml
+++ b/frameworks/g-cloud-7/messages/dates.yml
@@ -1,4 +1,5 @@
 clarifications_close_date: "5pm, 22 September 2015"
 clarifications_publish_date: "5pm, 29 September 2015"
 framework_close_date: "3pm, 6 October 2015"
+intention_to_award_date: "9 November 2015"
 framework_live_date: "23 November 2015"
