--- a/frameworks/digital-service-professionals/questions/briefs/numberOfSuppliersSpecialists.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/numberOfSuppliersSpecialists.yml
@@ -1,7 +1,7 @@
 name: How many specialists will you evaluate?
 id: numberOfSuppliers
 question: Number of specialists
-question_advice: You must evaluate at least 3 specialists.
+question_advice: You should evaluate at least 3, and no more than 15, specialists.
 
 type: number
 limits:
@@ -17,6 +17,6 @@ validations:
   - name: answer_required
     message: 'You need to answer this question.'
   - name: not_a_number
-    message: 'You must evaluate at least 3, and no more than 15, specialists.'
+    message: 'Enter a number between 3 and 15 to continue.'
 
 empty_message: Set maximum number of specialists you’ll evaluate
