--- a/frameworks/digital-service-professionals/questions/briefs/weightingSpecialists.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/weightingSpecialists.yml
@@ -1,5 +1,5 @@
 name: How will you evaluate the specialists?
-question: 'Evaluation weighting'
+question: ''
 question_advice: |
   Use the weightings to say how important each evaluation criteria is.
 
