--- a/frameworks/digital-outcomes-and-specialists-2/questions/briefs/evaluationTypeOutcomes.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/questions/briefs/evaluationTypeOutcomes.yml
@@ -19,11 +19,11 @@ options:
   - label: "Case study"
     description: >
        A case study is a good way to see the work suppliers have done before. It can help you understand whether the
-       people who'll be working on your project have the right skills and experience.
+       people who’ll be working on your project have the right skills and experience.
   - label: "Work history"
     description: >
        A work history lists the previous work a supplier has done. It should give you a view of the skills and
-       experience of the team members who'll be working on your project.
+       experience of the team members who’ll be working on your project.
   - label: "Reference"
     description: >
        A written reference is a good way of confirming whether a supplier has done the work they’ve said they’ve done.
