--- a/frameworks/digital-outcomes-and-specialists-2/questions/briefs/evaluationTypeParticipants.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/questions/briefs/evaluationTypeParticipants.yml
@@ -19,7 +19,7 @@ options:
   - label: "Case study"
     description: >
        A case study is a good way to see the work suppliers have done before. It can help you understand whether the
-       people who'll be working on your project have the right skills and experience.
+       people who’ll be working on your project have the right skills and experience.
   - label: "Reference"
     description: >
        A written reference is a good way of confirming whether a supplier has done the work they’ve said they’ve done.
