--- a/frameworks/digital-outcomes-and-specialists-2/questions/briefs/startDate.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/questions/briefs/startDate.yml
@@ -1,7 +1,7 @@
 name: Latest start date
 question: Latest start date
 question_advice: |
-  Say when you need suppliers to start work. When you shortlist, you can exclude suppliers who can't start by this date.
+  Say when you need suppliers to start work. When you shortlist, you can exclude suppliers who can’t start by this date.
 hint: 'eg 31/12/2016'
 type: text
 depends:
