--- a/frameworks/digital-outcomes-and-specialists-2/questions/clarification_question/questionAndAnswer.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/questions/clarification_question/questionAndAnswer.yml
@@ -6,7 +6,7 @@ question_advice: |
 
   You must publish all questions and answers.
 
-  All published questions and answers will be public. They'll appear at the bottom of your published requirements
+  All published questions and answers will be public. They’ll appear at the bottom of your published requirements
   page.
 
   Read more about [how to manage supplier questions](https://www.gov.uk/guidance/how-to-answer-supplier-questions-about-your-digital-outcomes-and-specialists-requirements).
