--- a/frameworks/digital-outcomes-and-specialists-2/questions/services/anonymousRecruitment.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/questions/services/anonymousRecruitment.yml
@@ -1,5 +1,5 @@
 name: Provide discreet recruitment
-question: Can you, if asked, recruit participants without revealing details of the organisation you're recruiting for?
+question: Can you, if asked, recruit participants without revealing details of the organisation you’re recruiting for?
 type: boolean
 depends:
   - "on": "lot"
