--- a/frameworks/digital-outcomes-and-specialists-2/questions/declaration/MI.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/questions/declaration/MI.yml
@@ -1,2 +1,2 @@
-question: "Do you confirm that you’re prepared to provide all Digital Outcomes and Specialists&nbsp;2-related management information (MI) to CCS as outlined in the [framework agreement](https://www.digitalmarketplace.service.gov.uk/suppliers/frameworks/digital-outcomes-and-specialists-2)?"
+question: "Do you confirm that you’re prepared to provide all Digital Outcomes and Specialists&nbsp;2-related management information (MI) to CCS as outlined in the [reporting template](/suppliers/frameworks/digital-outcomes-and-specialists-2)?"
 type: boolean
