Validation for UR essentials

--- a/frameworks/digital-outcomes-and-specialists-4/questions/services/anonymousRecruitment.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/services/anonymousRecruitment.yml
@@ -1,6 +1,8 @@
 name: Provide discreet recruitment
 question: Can you, if asked, recruit participants without revealing details of the organisation you’re recruiting for?
 type: boolean
+required_value: true
+
 depends:
   - "on": "lot"
     being:
