--- a/frameworks/digital-outcomes-and-specialists-4/questions/services/manageIncentives.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/services/manageIncentives.yml
@@ -1,6 +1,7 @@
 name: Manage incentives
 question: Do you agree to manage any incentives to user research participants?
 type: boolean
+required_value: true
 depends:
   - "on": "lot"
     being:
