Fix error message wording for MS reporting requirements

--- a/frameworks/digital-outcomes-and-specialists-4/questions/declaration/mitigatingFactors3.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/declaration/mitigatingFactors3.yml
@@ -8,7 +8,7 @@ hidden: true
 validations:
   -
     name: answer_required
-    message: You need to answer this question because you answered ‘yes’ to question [[modernSlaveryReportingRequirements]].
+    message: You need to answer this question because you answered ‘no’ to the Reporting Requirements question.
   -
     name: under_word_limit
     message: "Your answer must be no more than 500 words."
