dos4 briefs evaluationType* questions: remove before_summary_value, change content to make it clearer these are additional

--- a/frameworks/digital-outcomes-and-specialists-4/manifests/edit_brief.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/manifests/edit_brief.yml
@@ -82,6 +82,8 @@
       - evidence of their skills and experience
       - a proposal explaining how they plan to meet your requirements
 
+    All suppliers must provide a written proposal. You can choose additional assessment methods, for example a presentation.
+
     You must tell suppliers how you’ll evaluate and assess them.
 
   questions:
@@ -113,6 +115,8 @@
 
     ##3\. Evaluate your shortlist
     Ask the shortlisted specialists for evidence of their skills and experience.
+
+    All suppliers must provide a written proposal. You can choose additional assessment methods, for example a presentation.
 
     You must tell specialists how you’ll evaluate and assess them.
 
@@ -147,6 +151,8 @@
 
       - evidence of their skills and experience
       - a proposal explaining how they plan to recruit particpants
+
+    All suppliers must provide a written proposal. You can choose additional assessment methods, for example a case study.
 
     You must tell suppliers how you’ll evaluate and assess them.
 
