--- a/frameworks/digital-outcomes-and-specialists-4/questions/briefs/evaluationTypeSpecialists.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/briefs/evaluationTypeSpecialists.yml
@@ -1,4 +1,4 @@
-name: Assessment methods
+name: Additional assessment methods
 id: evaluationType
 question: How you’ll assess specialists
 question_advice: |
@@ -11,9 +11,6 @@ question_advice: |
   Read about [assessment methods](https://www.gov.uk/guidance/ways-to-assess-digital-outcomes-and-specialists-suppliers).
 type: checkboxes
 optional: true
-
-before_summary_value:
-  - "Work history"
 
 options:
   - label: "Reference"
@@ -42,4 +39,4 @@ validations:
   -
     name: answer_required
     message: 'You need to answer this question.'
-empty_message: Choose assessment method
+empty_message: Choose additional assessment methods
