dos4 brief evaluationType* questions: improve opening text of question_advice
it was thought the previous wording could be confusing because it all
appears below the heavy text "Optional"

--- a/frameworks/digital-outcomes-and-specialists-4/questions/briefs/evaluationTypeOutcomes.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/briefs/evaluationTypeOutcomes.yml
@@ -2,7 +2,7 @@ name: Additional assessment methods
 id: evaluationType
 question: How you’ll assess suppliers
 question_advice: |
-  You must ask all suppliers that reach the assessment stage for a written proposal.
+  All suppliers will have to provide a written proposal. However, you can also choose additional ways to assess them, if you want to.
 
   Choose additional ways to assess suppliers.
 
