--- a/frameworks/digital-outcomes-and-specialists-4/questions/briefs/evaluationTypeSpecialists.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/briefs/evaluationTypeSpecialists.yml
@@ -2,7 +2,7 @@ name: Additional assessment methods
 id: evaluationType
 question: How you’ll assess specialists
 question_advice: |
-  You must ask all specialists that reach the assessment stage for a work history.
+  All suppliers will have to provide a work history. However, you can also choose additional ways to assess them, if you want to.
 
   Choose additional ways to assess specialists.
 
