--- a/frameworks/g-cloud-11/messages/urls.yml
+++ b/frameworks/g-cloud-11/messages/urls.yml
@@ -6,6 +6,6 @@ supplier_guide_url: "https://www.gov.uk/guidance/g-cloud-suppliers-guide#how-to-
 
 call_off_contract_url: "https://www.gov.uk/government/publications/g-cloud-11-call-off-contract"
 
-customer_benefits_record_form_url: "http://ccs-agreements.cabinetoffice.gov.uk/sites/default/files/contracts/G-Cloud%20Customer%20Benefits%20Record_4.docx"
+customer_benefits_record_form_url: "https://assets.crowncommercial.gov.uk/wp-content/uploads/RM1557.11-Customer-benefits-record-v3.docx"
 
 customer_benefits_record_form_email: "gcloud-benefits@crowncommercial.gov.uk"
