Fix planning services search mapping

--- a/frameworks/g-cloud-11/questions/services/serviceCategoriesSupport.yml
+++ b/frameworks/g-cloud-11/questions/services/serviceCategoriesSupport.yml
@@ -12,7 +12,7 @@ number_of_items: 6
 options:
   - label: Planning
     derived_from:
-      question: setupAndMigrationService
+      question: planningService
       any_of:
         - true
   - label: Setup and migration
