--- a/frameworks/digital-outcomes-and-specialists-4/questions/briefs/technicalCompetenceCriteriaParticipants.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/briefs/technicalCompetenceCriteriaParticipants.yml
@@ -12,6 +12,9 @@ question_advice: |
   ##Giving points for individual criteria (optional)
   You can give points to individual criteria, eg ‘have experience recruiting participants with low digital literacy – 15 points’.
 
+  Unless you have asked for several examples, you should not score a supplier higher or lower because they give more or
+  less examples than another supplier.
+
   The points you give for nice-to-have skills and experience must be lower than the points you give for
   essential skills and experience and proposal criteria.
   Read [how to score individual criteria](https://www.gov.uk/guidance/how-to-set-your-evaluation-criteria-when-buying-digital-outcomes-and-specialists-services#giving-points-to-individual-criteria).
